# Gen_AI_tutorials

./: .gitignore  Makefile  README.md  pyproject.toml
app_folder/: cameroon-travel-app.py
notebooks/: 01-prompt-engineering.ipynb  02-conversational-app.ipynb  03-recommandation-system.ipynb
rag-evaluation/: rag-evaluation.ipynb
rag-evaluation/src/: agenthandler.py  documentPreparation.py
